--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -304,8 +304,8 @@ opacity: 1 !important;
   float: right;
 }
 .nav-side-menu li i.sidebar-icon {
-  margin-right: 0.6rem;
-  font-size: 1.5em;
+ // margin-right: 0.6rem;
+ // font-size: 1.5em;
 }
 .nav-side-menu ul .active,
 .nav-side-menu li .active {
@@ -326,10 +326,15 @@ opacity: 1 !important;
   font-weight: 300
 }
 .nav-side-menu li a i {
-  padding-left: 10px;
-  width: 20px;
-  padding-right: 20px;
+  //padding-left: 10px;
+ // width: 20px;
+ // padding-right: 20px;
 }
+
+.nav-side-menu li a span.side-nav-style {
+  padding-left: 20px;
+}
+
 .nav-side-menu li:hover {
 /*  border-left: 1px solid #23282e;
   background-color: #f3f4f8;*/
@@ -1641,10 +1646,10 @@ label.error {
 
 .custom-side-menu{
     i.sidebar-icon{
-      padding-right:36px;
+ //     padding-right:36px;
     }
-    i.custom-icon{
-      padding-right:26px;
+     i.custom-icon{
+//     padding-right:26px;
     }
 }
 
